--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "AoC_2023"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "common"
+path = "src/common/lib.rs"
+
 [[bin]]
 name = "day_01"
 path = "src/day_01/main.rs"
